ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: credit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: credit-api
                port:
                  number: 8000
    - host: mlflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
    - host: llm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-api
                port:
                  number: 8000
    - host: langgraph.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-langgraph-api
                port:
                  number: 8000
    - host: trino.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino
                port:
                  number: 8080
    - host: minio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
    - host: airflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-apiserver
                port:
                  number: 8080
